--- a/posts/collectibles-tracking-and-display-system.mdx
+++ b/posts/collectibles-tracking-and-display-system.mdx
@@ -101,7 +101,7 @@ some horor stories about people getting surpoise bills but that's just the
 servless life), and I do think I shoudl give it a try, maybe for my next pet
 proejct (which I probalby wont finish - HA).
 
-![Collectibles Architecture](https://raw.githubusercontent.com/DaveVED/my-posts/main/posts/collectibles-tracking-and-display-system/architecture.jpeg)
+![Collectibles Architecture](https://raw.githubusercontent.com/DaveVED/my-posts/main/posts/turborepo-blueprint-starter/golang-hello-wrold.png)
 
 I'm going to also touch on a few things that you may be asking your self, to
 just clear the air, I won't make any other justifications, otherwise (it's my
