--- a/posts/turborepo-blueprint-starter.mdx
+++ b/posts/turborepo-blueprint-starter.mdx
@@ -1,23 +1,49 @@
 ---
-title: 'Turborepo blueprint starter written in Go and deployed to npm with a Node Wrapper'
+title:
+  'Turborepo blueprint starter written in Go and deployed to npm with a Node
+  Wrapper'
 author: 'Dave Dennis'
 date: '2024-08-07'
 coverImage: 'https://raw.githubusercontent.com/DaveVED/my-posts/main/posts/turborepo-blueprint-starter/cover-iamge.jpg'
 excerpt: >
-  Hands up, I love monorepos, but organizing them and finding the correct tooling is not the easiest thing in the world. Over the last year, I've decided that my favorite tech stack for npm packages and similar projects is using Turborepo to manage the monorepo and Changesets for versioning multiple packages. This setup enables a very clean directory structure. Vercel has published decent examples, but they are all over the place and the changesets example requires a lot of copy paste. I am going to create a cli tool to allow dynamic generation of these examples from a single blueprint.
+  Hands up, I love monorepos, but organizing them and finding the correct
+  tooling is not the easiest thing in the world. Over the last year, I've
+  decided that my favorite tech stack for npm packages and similar projects is
+  using Turborepo to manage the monorepo and Changesets for versioning multiple
+  packages. This setup enables a very clean directory structure. Vercel has
+  published decent examples, but they are all over the place and the changesets
+  example requires a lot of copy paste. I am going to create a cli tool to allow
+  dynamic generation of these examples from a single blueprint.
 ---
 
-Hands up, I love monorepos, but organizing them and finding the correct tooling is not the easiest thing in the world. Over the last year, I've decided that my favorite tech stack for npm packages and similar projects is using Turborepo to manage the monorepo and Changesets for versioning multiple packages. This setup enables a very clean directory structure. Vercel has published decent examples, but they are all over the place and the changesets example requires a lot of copy paste. I am going to create a CLI tool to allow dynamic generation of these examples from a single blueprint.
+Hands up, I love monorepos, but organizing them and finding the correct tooling
+is not the easiest thing in the world. Over the last year, I've decided that my
+favorite tech stack for npm packages and similar projects is using Turborepo to
+manage the monorepo and Changesets for versioning multiple packages. This setup
+enables a very clean directory structure. Vercel has published decent examples,
+but they are all over the place and the changesets example requires a lot of
+copy paste. I am going to create a CLI tool to allow dynamic generation of these
+examples from a single blueprint.
 
 ## A Deeper Look at the Problem
 
-All of the turbo examples can be found on their [GitHub](https://github.com/vercel/turbo/tree/main/examples), and as you'll see, they have *great* examples and *a lot* of examples. But the way the examples were built achieves one thing for each example, and some of the examples require many interventions (for example, the changeset one). If I wanted to use the changeset with, say, the Tailwind example, I have to manually merge them. It's sort of a pain. Why not have a central CLI tool that takes in some basic inputs and builds the repo with everything you need? Well, that's what I'm going to attempt to do.
+All of the turbo examples can be found on their
+[GitHub](https://github.com/vercel/turbo/tree/main/examples), and as you'll see,
+they have _great_ examples and _a lot_ of examples. But the way the examples
+were built achieves one thing for each example, and some of the examples require
+many interventions (for example, the changeset one). If I wanted to use the
+changeset with, say, the Tailwind example, I have to manually merge them. It's
+sort of a pain. Why not have a central CLI tool that takes in some basic inputs
+and builds the repo with everything you need? Well, that's what I'm going to
+attempt to do.
 
-> Please note, the initial build is going to focus on changesets and Tailwind. I will add others as I go. But please don't expect this blog to cover them all.
+> Please note, the initial build is going to focus on changesets and Tailwind. I
+> will add others as I go. But please don't expect this blog to cover them all.
 
 ## Project Initialization
 
-Ok this might differ than some projects you've seen as i'm mixing golang and node. I'm going to go with a simple directory setup like such.
+Ok this might differ than some projects you've seen as i'm mixing golang and
+node. I'm going to go with a simple directory setup like such.
 
 ```bash
 turborepo-blueprint/
@@ -37,11 +63,13 @@ turborepo-blueprint/
 └── README.md
 ```
 
-It's going to allow me to isolate the golang features from the node, and still keep a small clean repo.
+It's going to allow me to isolate the golang features from the node, and still
+keep a small clean repo.
 
 ### Step 1 - Setup the Go Program
 
-We're going to start simple as i'd like to ensure the node wrapper works, so for the golang i'm going to just print a `hello world` to the terminal for now. 
+We're going to start simple as i'd like to ensure the node wrapper works, so for
+the golang i'm going to just print a `hello world` to the terminal for now.
 
 ```bash
 mkdir go && cd go
@@ -64,11 +92,14 @@ Then test it if you'd like.
 
 ![Golang Hello World](https://raw.githubusercontent.com/DaveVED/my-posts/main/posts/turborepo-blueprint-starter/golang-hello-world.png)
 
-With that we're done with go code for now (of course we have so much to do, I want to verify this works first).
+With that we're done with go code for now (of course we have so much to do, I
+want to verify this works first).
 
 #### Step 2 - The Makefile
 
-I lied we'll need to create a makefile as we'll requrie the binarys for the node wrapper. We'll be short, sweet and to the point for now. The one thing to note is that you will *need to create your node folder* or some OS will complain.
+I lied we'll need to create a makefile as we'll requrie the binarys for the node
+wrapper. We'll be short, sweet and to the point for now. The one thing to note
+is that you will _need to create your node folder_ or some OS will complain.
 
 ```
 BINARY_NAME=turborepo-blueprint
@@ -85,7 +116,9 @@ build-windows:
 build-all: build-linux build-mac build-windows
 ```
 
-You can test this out, if you'd like. But once we have this basic binary we can move forward, linux is all I really care about right now, but you can also run the `make build-all`.
+You can test this out, if you'd like. But once we have this basic binary we can
+move forward, linux is all I really care about right now, but you can also run
+the `make build-all`.
 
 ```bash
 make build-linux
@@ -96,7 +129,8 @@ ls ../node/bin/turborepo-blueporint
 
 #### Step 3 - Seting up the Node.js Wrapper with Typescript
 
-Ok now all that's left before we can publish and do the simple test is setting up the Node wrapper. We'll start simple.
+Ok now all that's left before we can publish and do the simple test is setting
+up the Node wrapper. We'll start simple.
 
 ```bash
 cd ../node
@@ -104,7 +138,9 @@ npm init -y
 npm install typescript @types/node --save-dev
 ```
 
-You can then configure your `./node/tsconfig.json`. I use a pretty standard tempalte. But you can read a great blog post [here](https://www.totaltypescript.com/tsconfig-cheat-sheet) on some of these.
+You can then configure your `./node/tsconfig.json`. I use a pretty standard
+tempalte. But you can read a great blog post
+[here](https://www.totaltypescript.com/tsconfig-cheat-sheet) on some of these.
 
 ```json
 {
