feat: update feed

--- a/posts/deploy-go-cli-to-npm.mdx
+++ b/posts/deploy-go-cli-to-npm.mdx
@@ -26,7 +26,6 @@ I've been going back and forth with this, but for this example, we'll go with th
 └── node
     ├── bin
     │   └── turborepo-blueprint
-    ├── CHANGELOG.md
     ├── dist
     │   ├── ...
     ├── package.json
@@ -98,6 +97,6 @@ make build-linux
 ls ../node/bin/turborepo-blueprint
 ```
 
-![Makefile Linux First Build(https://raw.githubusercontent.com/DaveVED/my-posts/main/posts/deploy-go-cli-to-npm/makefile-linux-first-build.png)
+![Makefile Linux First Build](https://raw.githubusercontent.com/DaveVED/my-posts/main/posts/deploy-go-cli-to-npm/makefile-linux-first-build.png)
 
 > we will use `build-all` at the end, this is just to show you.
