--- a/posts/deploy-go-cli-to-npm.mdx
+++ b/posts/deploy-go-cli-to-npm.mdx
@@ -7,15 +7,17 @@ excerpt: >
   I want to build a CLI tool similar to `npx create-xyz@latest`, but I don't want most of my logic in TypeScript because it lacks support for templating. Python has good support with the [*copier framework*](https://copier.readthedocs.io/en/stable/), but Go, with its robust templating support through `text/template` and `html/template` packages, is my preferred choice for creating a flexible and powerful CLI tool.
 ---
 
-I want to build a CLI tool similar to `npx create-xyz@latest`, but I don't want most of my logic living in TypeScript. Why? Because it lacks support for templating (to be fair, it really has no support for it at all). Who does have support for it? Python, using the [*copier framework*](https://copier.readthedocs.io/en/stable/), which works well, and of course, Go. Go offers robust templating support through its `text/template` and `html/template` packages, making it an ideal choice for creating a flexible and powerful CLI tool.
+I want to build a CLI tool similar to `npx create-xyz@latest`, but I don't want most of my logic living in TypeScript. Why? Because it lacks support for templating. To be fair, it really has no support for it at all. Who does have support for templating? 
 
-For this, I'm going to go with Go. More folks would probably appreciate the copier (since Python is more user-friendly, depending on who you ask; if you ask me, Go is, and it's the fastest software to get up and running with `go mod init` for the win).
+Zig seemed to do something similar with Bun, so we should be able to do something similar with a different language, for example, Python, using the [`copier framework`](https://copier.readthedocs.io/en/stable/), which works well. And of course, there's Go. Go offers robust templating support through its [*`text/template`*](https://pkg.go.dev/text/template) and [*`html/template packages`*](https://pkg.go.dev/html/template), making it an ideal choice for creating a flexible and powerful CLI tool.
 
-Anyways, this blog is going to cover the basics: let's deploy a Hello World Go CLI to npm so we can do something like `npx create-xyz@latest`.
+For this exmaple, I'm going to go with Go (lol). More folks might appreciate the copier framework (since Python is more user-friendly, depending on who you ask), but in my opinion, Go is easier to get up and running with thanks to go mod init.
+
+Anyways, this blog is going to cover the basics: *let's deploy a Hello World Go CLI to npm* so we can do something like `npx create-xyz@latest`.
 
 ## Directory Setup
 
-I've been going back and forth with this, but for this example, we'll go with the bare minimum that will allow us to get a Go CLI deployed to npm, so we can meet our acceptance criteria. We'll end up with something like this:
+I've been going back and forth with this, but for this example, we'll go with the bare minimum that will allow us to get a Go CLI deployed to npm and meet our acceptance criteria (display `hello world!`). We'll end up with something like this:
 
 ```bash
 ├── go
@@ -33,14 +35,14 @@ I've been going back and forth with this, but for this example, we'll go with th
     └── tsconfig.json
 ```
 
-It's simple and straightforward and won't allow us to get confused for this basic example. So let's get started with it.
+It's simple and straightforward and will prevent confusion for this basic example. So let's get started with it.
 
 ## Getting Started
 
-We're sticking to the basics here, and everyone's favorite Hello World application. For this example, the Go application will simply print Hello World to your terminal. Something like this:
+We're sticking to the basics here with everyone's favorite `Hello World` application. For this example, the Go application will simply print `"Hello World"` to your terminal. Something like this:
 
 ```bash
-➜  temp npx turborepo-blueprint
+➜ npx turborepo-blueprint
 Hello World
 ```
 
@@ -55,7 +57,7 @@ mkdir go && cd go
 go mod init github.com/DaveVED/turborepo-blueprint
 ```
 
-You can then create a file called main.go with minimal input:
+You can then create a file called `main.go` with minimal input:
 
 ```go
 package main
@@ -73,7 +75,7 @@ Then test it if you'd like.
 
 ### The Makefile
 
-To create a Makefile, we'll require the binaries for the Node wrapper. We'll be short, sweet, and to the point for now. The one thing to note is that you will need to create your node folder or some OS will complain.
+To create a Makefile, we'll require the binaries for the Node wrapper. We'll be short, sweet, and to the point for now. One thing to note is that you will need to create your node folder, or some OS will complain.
 
 ```bash
 BINARY_NAME=turborepo-blueprint
@@ -90,11 +92,11 @@ build-windows:
 build-all: build-linux build-mac build-windows
 ```
 
-You can test this out if you'd like. But once we have this basic binary, we can move forward. Linux is all I really care about right now, but you can also run the make build-all.
+You can test this out if you'd like. But once we have this basic binary, we can move forward. Linux is all I really care about right now, but you can also run make build-all.
 
 ```bash
-make build-linux
-ls ../node/bin/turborepo-blueprint
+➜ make build-linux
+➜ ls ../node/bin/turborepo-blueprint
 ```
 
 ![Makefile Linux First Build](https://raw.githubusercontent.com/DaveVED/my-posts/main/posts/deploy-go-cli-to-npm/makefile-linux-first-build.png)
@@ -103,23 +105,21 @@ ls ../node/bin/turborepo-blueprint
 
 ### The node wrapper
 
-This is what I thought would be the easy part (no it was not). But we need a way to execute the `golang` cli without them having go on there machine, and really without them knowing.
+This part might seem easy, but it turned out to be more challenging than expected. We need a way to execute the Go CLI without requiring users to have Go installed on their machines, and ideally without them even knowing it's there.
 
 #### Setting up the typescript directory
 
-Let's first init the project
+Let's first initialize the project:
 
 ```bash
-cd ../node
-npm init -y
-npm install typescript @types/node
+➜ cd ../node
+➜ npm init -y
+➜ npm install typescript @types/node
 ```
 
-> normally we add a -D tag here to only add it as a dev dependince but was facing some issue with users not having typecript installed so why not force it.
+> Normally, we add a `-D` tag here to only add it as a dev dependency, but I faced some issues with users not having TypeScript installed, so why not force it?
 
-You can then configure your `./node/tsconfig.json`. I use a pretty standard
-tempalte. But you can read a great blog post
-[here](https://www.totaltypescript.com/tsconfig-cheat-sheet) on some of these.
+You can then configure your `./node/tsconfig.json.` I use a pretty standard template, but you can read a great blog post [here](https://www.totaltypescript.com/tsconfig-cheat-sheet) on some of these.
 
 ```json
 {
@@ -138,13 +138,16 @@ tempalte. But you can read a great blog post
   "include": ["index.ts"]
 }
 ```
-and with that you have the basic repo setup required.
+
+With that, you have the basic repository setup required.
 
 #### Creating the typescript wrapper
 
-At a high level all we need to do is ensure we install the correct binary on the correct machine.
+At a high level, all we need to do is ensure we install the correct binary on the correct machine.
 
-> make sure you bundle your binary wiht you dist.
+> Make sure you bundle your binary with your distribution.
+
+Create an `index.ts` file with the following content:
 
 ```typescript
 #!/usr/bin/env node
@@ -155,59 +158,95 @@ import * as path from 'path';
 import * as os from 'os';
 import * as fs from 'fs';
 
-const __filename = fileURLToPath(import.meta.url);
-const __dirname = path.dirname(__filename);
-
-const platform = os.platform();
-let binaryPath;
-
-switch (platform) {
-  case 'linux':
-  case 'darwin':
-    console.log("HERE");
-    binaryPath = path.resolve(__dirname, 'bin/turborepo-blueprint');
-    break;
-  case 'win32':
-    binaryPath = path.resolve(__dirname, 'bin/turborepo-blueprint.exe');
-    break;
-  default:
-    console.error(`Unsupported platform: ${platform}`);
-    process.exit(1);
+/**
+ * Get the directory name of the current module.
+ * @returns The directory name of the current module.
+ */
+function getDirname(): string {
+  const __filename = fileURLToPath(import.meta.url);
+  return path.dirname(__filename);
 }
 
-console.log(`Resolved binary path: ${binaryPath}`);
+/**
+ * Determine the path to the binary based on the operating system platform.
+ * @param dirname - The directory name of the current module.
+ * @returns The path to the binary.
+ */
+function getBinaryPath(dirname: string): string {
+  const platform = os.platform();
 
-if (!fs.existsSync(binaryPath)) {
-  console.error(`Binary not found at path: ${binaryPath}`);
-  process.exit(1);
+  switch (platform) {
+    case 'linux':
+    case 'darwin':
+      return path.resolve(dirname, 'bin/turborepo-blueprint');
+    case 'win32':
+      return path.resolve(dirname, 'bin/turborepo-blueprint.exe');
+    default:
+      console.error(`Unsupported platform: ${platform}`);
+      process.exit(1);
+  }
 }
 
-// Ensure the binary has execute permissions on Unix-based systems
-if (platform !== 'win32') {
-  try {
-    fs.chmodSync(binaryPath, '755');
-  } catch (error) {
-    console.error(`Failed to set execute permissions on binary: ${error}`);
+/**
+ * Check if the binary exists at the determined path.
+ * @param binaryPath - The path to the binary.
+ */
+function checkBinaryExists(binaryPath: string): void {
+  if (!fs.existsSync(binaryPath)) {
+    console.error(`Binary not found at path: ${binaryPath}`);
     process.exit(1);
   }
 }
 
-try {
-  execFileSync(binaryPath, { stdio: 'inherit' });
-  console.log("Binary executed successfully.");
-} catch (error) {
-  console.error('Failed to run the binary:', error);
-  process.exit(1);
+/**
+ * Ensure the binary has execute permissions on Unix-based systems.
+ * @param binaryPath - The path to the binary.
+ * @param platform - The operating system platform.
+ */
+function setExecutePermissions(binaryPath: string, platform: string): void {
+  if (platform !== 'win32') {
+    try {
+      fs.chmodSync(binaryPath, '755');
+    } catch (error) {
+      console.error(`Failed to set execute permissions on binary: ${error}`);
+      process.exit(1);
+    }
+  }
 }
+
+/**
+ * Execute the binary and handle any errors.
+ * @param binaryPath - The path to the binary.
+ */
+function executeBinary(binaryPath: string): void {
+  try {
+    execFileSync(binaryPath, { stdio: 'inherit' });
+  } catch (error) {
+    console.error('Failed to run the binary:', error);
+    process.exit(1);
+  }
+}
+
+// Main function to coordinate the execution
+function main(): void {
+  const dirname = getDirname();
+  const binaryPath = getBinaryPath(dirname);
+  checkBinaryExists(binaryPath);
+  setExecutePermissions(binaryPath, os.platform());
+  executeBinary(binaryPath);
+}
+
+// Execute the main function
+main();
 ```
 
-Now you can test this, with the current setup before we publish it.
+Now you can test this with the current setup before we publish it.
 
 ```bash
-npm run build
-chmod +x dist/index.js # for local testing run this
-npx turborepo-blueprint   
-Hello World
+➜ npm run build
+➜ chmod +x dist/index.js # for local testing run this
+➜ npx turborepo-blueprint   
+➜ Hello World
 ```
 
 ### Publishing with Changeset
@@ -219,22 +258,22 @@ Versioning and publishing packages on npm can be cumbersome. To streamline this 
 To get started with Changeset, you need to install it as a development dependency in your project:
 
 ```sh
-npm install @changesets/cli -D
+➜ npm install @changesets/cli -D
 ```
 
 Next, initialize Changeset in your project. This will create a .changeset folder and a configuration file.
 
 ```sh
-npx changeset init
+➜ npx changeset init
 ```
 
 #### Creating a Changeset
 
-Whenever you make changes that you want to release, create a new changeset. This will prompt you to describe the changes and generate a markdown file in the .changeset directory.
-
+Whenever you make changes that you want to release, create a new changeset. This will prompt you to describe the changes and generate a markdown file in the `.changeset ` directory.
 ```sh
-npx changeset
+➜ npx changeset
 ```
+
 Follow the prompts to describe your changes.
 
 #### Committing the Changeset
@@ -242,8 +281,8 @@ Follow the prompts to describe your changes.
 After creating a changeset, commit it to your version control system (e.g., Git):
 
 ```sh
-git add .changeset
-git commit -m "Add changeset for new changes"
+➜ git add .changeset
+➜ git commit -m "Add changeset for new changes"
 ```
 
 #### Versioning and Changelog Generation
@@ -251,7 +290,7 @@ git commit -m "Add changeset for new changes"
 When you’re ready to release, run the following command to bump versions and generate changelogs:
 
 ```sh
-npx changeset version
+➜ npx changeset version
 ```
 
 This command updates the version in your package.json and creates or updates the changelog.
@@ -261,63 +300,14 @@ This command updates the version in your package.json and creates or updates the
 Finally, publish your package to npm:
 
 ```sh
-npm publish
+➜ npm publish
 ```
 
-#### Automating with CI/CD
-
-For larger projects or more frequent releases, you can automate the versioning and publishing process using a CI/CD pipeline. Here’s an example of a GitHub Actions workflow (.github/workflows/release.yml) that automates the release process
-
-```yaml
-name: Release
-
-on:
-  push:
-    branches:
-      - main
-
-concurrency: ${{ github.workflow }}-${{ github.ref }}
-
-jobs:
-  release:
-    name: Release
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v4
-
-      - name: Setup pnpm 8
-        uses: pnpm/action-setup@v3
-        with:
-          version: 8
-
-      - name: Setup Node.js 20.x
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20.x
-
-      - name: Install Dependencies
-        run: pnpm i
-
-      - name: Create Release Pull Request or Publish to npm
-        id: changesets
-        uses: changesets/action@v1
-        with:
-          # This expects you to have a script called release which does a build for your packages and calls changeset publish
-          publish: pnpm release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      - name: Send a Slack notification if a publish happens
-        if: steps.changesets.outputs.published == 'true'
-        # You can do something when a publish happens.
-        run: my-slack-bot send-notification --message "A new version of ${GITHUB_REPOSITORY} was published!"
-```
+> You can always autmoate this with a cli if you want, vercel has a greate exmaple.
 
 ## Try it out
 
-You can try it wout, assuming you have a valid package
+You can try it out, assuming you have a valid package:
 
 ```sh
 ➜  temp npm view @daveved/turborepo-blueprint
@@ -339,6 +329,6 @@ dist-tags:
 latest: 0.0.3  
 
 published 54 minutes ago by daveved <dave.w.dennis@gmail.com>
-➜  temp npx turborepo-blueprint              
+➜ npx turborepo-blueprint              
 Hello World
 ```
