--- a/posts/deploy-go-cli-to-npm.mdx
+++ b/posts/deploy-go-cli-to-npm.mdx
@@ -2,8 +2,8 @@
 title: 'Deploying a Go CLI to npm'
 author: 'Dave Dennis'
 date: '2024-08-07'
-coverImage: 'https://raw.githubusercontent.com/DaveVED/my-posts/main/posts/deploy-go-cli-to-npm/cover_iamge.jpg'
-excerpt: >
+coverImage: 'https://raw.githubusercontent.com/DaveVED/my-posts/main/posts/deploy-go-cli-to-npm/cover-iamge.jpg'
+summary: >
   I want to build a CLI tool similar to `npx create-xyz@latest`, but I don't
   want most of my logic in TypeScript because it lacks support for templating.
   Python has good support with the [*copier
