--- a/posts/deploy-go-cli-to-npm.mdx
+++ b/posts/deploy-go-cli-to-npm.mdx
@@ -10,6 +10,7 @@ summary: >
   framework*](https://copier.readthedocs.io/en/stable/), but Go, with its robust
   templating support through `text/template` and `html/template` packages, is my
   preferred choice for creating a flexible and powerful CLI tool.
+tags: 'blog'
 ---
 
 I want to build a CLI tool similar to `npx create-xyz@latest`, but I don't want
